--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-# Logs
+# Dependencies
+/node_modules
+
+# Vite build output
+/dist
+/dist-ssr
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+*.local
+
+# Log files
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# OS-generated files
+.DS_Store
+Thumbs.db
