--- a/package.json
+++ b/package.json
@@ -12,18 +12,16 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^10.14.1",
     "ldrs": "^1.1.7",
     "lucide-react": "^0.507.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router": "^7.5.3",
+    "react-router-dom": "^6.28.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
